rewrite comments, messages, params explanations,...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,3 +20,4 @@ importFrom(lubridate,decimal_date)
 importFrom(readr,parse_number)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stringr,str_extract)
