Remove package warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,5 @@ importFrom(lubridate,decimal_date)
 importFrom(readr,parse_number)
 importFrom(stats,rpois)
 importFrom(stats,runif)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
