Add ImportALl function function to import and concatenate a list of files in a single command

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(Complete_commut)
 export(generate_pop)
 export(get_commut_vars)
+export(importAll)
 export(inc_pop)
 export(lum_0_100)
 export(rdate)
@@ -17,6 +18,7 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(lubridate,date_decimal)
 importFrom(lubridate,decimal_date)
+importFrom(openxlsx,read.xlsx)
 importFrom(readr,parse_number)
 importFrom(stats,rpois)
 importFrom(stats,runif)
