--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(time_table)
 export(timer)
 import(data.table, except =  c(month, hour, quarter, week, year, wday, second, minute, mday, yday, isoweek))
 import(lubridate)
+importFrom(data.table,copy)
 importFrom(grDevices,rgb)
 importFrom(graphics,par)
 importFrom(graphics,plot)
