Handle the message option in dep_tables and correct typos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_commut_vars)
 export(importAll)
 export(inc_pop)
 export(lum_0_100)
+export(plotPRCRes)
 export(qx_to_lx)
 export(rdate)
 export(save_in_old)
@@ -15,6 +16,7 @@ export(sortby)
 export(time_table)
 export(timer)
 import(data.table, except =  c(month, hour, quarter, week, year, wday, second, minute, mday, yday, isoweek))
+import(ggplot2)
 import(lubridate)
 importFrom(data.table,copy)
 importFrom(grDevices,rgb)
@@ -24,6 +26,8 @@ importFrom(lubridate,date_decimal)
 importFrom(lubridate,decimal_date)
 importFrom(openxlsx,read.xlsx)
 importFrom(readr,parse_number)
+importFrom(stats,median)
+importFrom(stats,reorder)
 importFrom(stats,rpois)
 importFrom(stats,runif)
 importFrom(stringr,str_detect)
