--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,4 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: data.table, lubridate, rstudioapi, stringr, grDevices, graphics, readr, openxlsx
+Imports: data.table, lubridate, rstudioapi, stringr, grDevices, graphics, readr, openxlsx, ggplot2
