add messages about tables sizes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plotPRCRes)
 export(qx_to_lx)
 export(rdate)
 export(save_in_old)
+export(sepThsd)
 export(sortby)
 export(time_table)
 export(timer)
