Handle case where there is only one inc column among input tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(Complete_commut)
 export(addDim)
 export(compareVars)
 export(dep_table)
+export(dimsCol)
 export(generate_pop)
 export(get_commut_vars)
 export(groupIncs)
+export(groupIncsV2)
 export(importAll)
 export(inc_pop)
 export(lum_0_100)
