--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,17 +5,22 @@ export(addDim)
 export(compareVars)
 export(dep_table)
 export(dimsCol)
+export(extendLifeTable)
 export(generate_pop)
 export(get_commut_vars)
 export(groupIncs)
 export(groupIncsV2)
 export(importAll)
 export(inc_pop)
+export(listVarsUniques)
 export(lum_0_100)
 export(mergeLifeTables)
 export(plotPRCRes)
 export(qx_to_lx)
 export(rdate)
+export(readable_period)
+export(ret_lum)
+export(root)
 export(save_in_old)
 export(sepThsd)
 export(sortby)
@@ -25,6 +30,7 @@ import(data.table, except =  c(month, hour, quarter, week, year, wday, second, m
 import(ggplot2)
 import(lubridate)
 importFrom(data.table,copy)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,rgb)
 importFrom(graphics,par)
 importFrom(graphics,plot)
