getLibsR.AlphA - function to import libs in manRun parts without having warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addDim)
 export(compareVars)
+export(getLibsR.AlphA)
 export(importAll)
 export(left_join_checks)
 export(listVarsUniques)
@@ -17,7 +18,7 @@ export(time_table)
 export(timer)
 export(tmr_init)
 import(data.table, except =  c(month, hour, quarter, week, year, wday, second, minute, mday, yday, isoweek))
-import(dplyr)
+import(dplyr, except = c(first, last, between))
 import(ggplot2)
 import(lubridate)
 importFrom(grDevices,col2rgb)
